--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,12 @@ packages = [{include = "electronics_shop_project"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pendulum = "^2.1.2"
+pytest = "^7.3.1"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
